# tiny-evm

./: Cargo.toml  PHASE1_IMPLEMENTATION_GUIDE.md  README.md
src/: lib.rs  main.rs  types.rs
src/evm/: context.rs  memory.rs  mod.rs  stack.rs  storage.rs
src/evm/opcodes/: arithmetic.rs  bitwise.rs  comparison.rs  context.rs  control.rs  crypto.rs  memory.rs  mod.rs  stack.rs  storage.rs  system.rs  traits.rs
src/gas/: mod.rs
src/state/: mod.rs
tests/: test_context.rs  test_evm.rs  test_evm_basic.rs  test_gas.rs  test_memory.rs  test_opcodes.rs  test_push1.rs  test_stack.rs  test_state.rs  test_storage.rs
tests/evm/: memory.rs  mod.rs  test_opcodes.rs
tests/evm/opcodes/: arithmetic.rs  dup.rs  mod.rs  pop.rs  push.rs  swap.rs
