[package]
name = "tinyevm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Big integer arithmetic
primitive-types = "0.12"  # U256, H256, H160
ethereum-types = "0.14"

# Hashing & Crypto
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["recovery"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rlp = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.0"

[dev-dependencies]
criterion = "0.5"
